--- a/ui.apps/src/main/content/jcr_root/apps/AEMMaven13/components/content/helloworld/helloworld.html
+++ b/ui.apps/src/main/content/jcr_root/apps/AEMMaven13/components/content/helloworld/helloworld.html
@@ -14,7 +14,7 @@
     limitations under the License.
 */-->
 <p data-sly-test="${properties.text}">Text property: ${properties.text}</p>
-
+<h1>hello world</h1>
 <pre data-sly-use.hello="com.aem.community.core.models.HelloWorldModel">
 HelloWorldModel says:
 ${hello.message}
